logika: log: added logger class

--- a/Makefile.linux
+++ b/Makefile.linux
@@ -5,14 +5,14 @@ SRC_DIR		= src
 BIN_DIR		= bin
 BUILD_DIR   = build
 CXXERRORS	= -std=c++11 -pedantic \
-	-Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy \
+	-Wall -Wextra -Wcast-align -Wcast-qual -Weffc++ \
 	-Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op \
 	-Wmissing-declarations -Wmissing-include-dirs -Wnoexcept \
 	-Wold-style-cast -Woverloaded-virtual -Wredundant-decls \
 	-Wshadow -Wsign-conversion -Wsign-promo \
 	-Wstrict-null-sentinel -Wstrict-overflow=5 \
 	-Wswitch-default -Wundef -Werror -Wno-unused \
-	-Wswitch-enum -Weffc++
+	-Wswitch-enum
 CXXFLAGS	= -I$(INCLUDE_DIR) $(CXXERRORS)
 CCFLAGS		=
 CC			= g++
