logika: connections: added serial connection

--- a/logika/Makefile
+++ b/logika/Makefile
@@ -1,6 +1,8 @@
 TARGET		= test_main
 OBJS		= \
 	connections/connection.o \
+	connections/serial/serial_connection.o \
+	connections/utils/types_converter.o \
 	log/logger.o \
 	main.o \
 
