--- a/logika/Makefile
+++ b/logika/Makefile
@@ -2,6 +2,8 @@ TARGET		= test_main
 OBJS		= \
 	connections/connection.o \
 	connections/serial/serial_connection.o \
+	connections/serial/serial_port_connection.o \
+	connections/serial/serial_port_connection_linux.o \
 	connections/utils/types_converter.o \
 	log/logger.o \
 	main.o \
