logika: connections: some fixes

--- a/logika/Makefile
+++ b/logika/Makefile
@@ -6,6 +6,7 @@ OBJS		= \
 	connections/serial/serial_port_connection_linux.o \
 	connections/utils/types_converter.o \
 	log/logger.o \
+	common/misc.o \
 	main.o \
 
 include ../Makefile.linux
