--- a/logika/Makefile
+++ b/logika/Makefile
@@ -5,6 +5,7 @@ OBJS		= \
 	connections/serial/serial_port_connection.o \
 	connections/serial/serial_port_connection_linux.o \
 	connections/utils/types_converter.o \
+	connections/common/linux_io.o \
 	log/logger.o \
 	common/misc.o \
 	main.o \
