--- a/logika/CMakeLists.txt
+++ b/logika/CMakeLists.txt
@@ -71,3 +71,6 @@ target_include_directories(test_main PRIVATE ${INCLUDE_DIR})
 if (WIN32)
 target_link_libraries(test_main PRIVATE ws2_32)
 endif()
+
+target_link_libraries(test_main logika_resources)
+target_include_directories(test_main PRIVATE ${logika_resources_INCLUDE_DIR})
