--- a/logika/CMakeLists.txt
+++ b/logika/CMakeLists.txt
@@ -11,81 +11,30 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-# @todo Разбить на модули
 # @todo Опции для выбора модулей для сборки
-
-set(SOURCES_LIST
-	${SRC_DIR}/connections/connection.cpp
-	${SRC_DIR}/connections/serial/serial_connection.cpp
-	${SRC_DIR}/connections/serial/serial_port_connection.cpp
-	${SRC_DIR}/connections/network/net_connection.cpp
-	${SRC_DIR}/connections/network/udp_connection.cpp
-	${SRC_DIR}/connections/network/tcp_connection.cpp
-	${SRC_DIR}/connections/utils/types_converter.cpp
-	${SRC_DIR}/protocols/protocol.cpp
-	${SRC_DIR}/protocols/m4/archive_record.cpp
-	${SRC_DIR}/protocols/m4/packet.cpp
-	${SRC_DIR}/protocols/m4/m4protocol.cpp
-	${SRC_DIR}/meters/types.cpp
-	${SRC_DIR}/meters/archive_def.cpp
-	${SRC_DIR}/meters/archive_field_def.cpp
-	${SRC_DIR}/meters/channel.cpp
-	${SRC_DIR}/meters/item_def_base.cpp
-	${SRC_DIR}/meters/meter.cpp
-	${SRC_DIR}/meters/tag_def.cpp
-	${SRC_DIR}/meters/tag.cpp
-	${SRC_DIR}/meters/logika4/archive_field_def4.cpp
-	${SRC_DIR}/meters/logika4/tag_def4.cpp
-	${SRC_DIR}/meters/logika4/4l/tag_def4l.cpp
-	${SRC_DIR}/meters/logika4/4l/archive_def4l.cpp
-	${SRC_DIR}/meters/logika4/4l/archive_field_def4l.cpp
-	${SRC_DIR}/meters/logika4/4m/tag_def4m.cpp
-	${SRC_DIR}/meters/logika4/4m/archive_def4m.cpp
-	${SRC_DIR}/meters/logika4/4m/archive_field_def4m.cpp
-	${SRC_DIR}/meters/logika6/tag_def6.cpp
-	${SRC_DIR}/meters/logika6/archive_def6.cpp
-	${SRC_DIR}/meters/logika6/archive_field_def6.cpp
-	${SRC_DIR}/meters/utils/types_converter.cpp
-	${SRC_DIR}/log/logger.cpp
-	${SRC_DIR}/common/misc.cpp
-	${SRC_DIR}/main.cpp
-)
-
-if (WIN32)
-	list(APPEND SOURCES_LIST
-		${SRC_DIR}/connections/serial/serial_port_connection_windows.cpp
-		${SRC_DIR}/connections/network/udp_connection_windows.cpp
-		${SRC_DIR}/connections/network/tcp_connection_windows.cpp
-		${SRC_DIR}/connections/common/windows_socket_io.cpp
-	)
-elseif(UNIX)
-	list(APPEND SOURCES_LIST
-		${SRC_DIR}/connections/serial/serial_port_connection_linux.cpp
-		${SRC_DIR}/connections/network/udp_connection_linux.cpp
-		${SRC_DIR}/connections/network/tcp_connection_linux.cpp
-		${SRC_DIR}/connections/common/linux_io.cpp
-	)
-	list(APPEND CMAKE_CXX_FLAGS -g3)
-endif()
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/logger.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/connections.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/meters.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/resource_converters.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/protocols.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/common.cmake)
 
 add_executable(
 	test_main
-	${SOURCES_LIST}
+	${SRC_DIR}/main.cpp
 )
-
 target_include_directories(test_main PRIVATE ${INCLUDE_DIR})
 
-if (WIN32)
-target_link_libraries(test_main PRIVATE ws2_32)
-endif()
+target_link_libraries(test_main PRIVATE ${CMAKE_PROJECT_NAME}_logger)
+target_link_libraries(test_main PRIVATE ${CMAKE_PROJECT_NAME}_connections)
+target_link_libraries(test_main PRIVATE ${CMAKE_PROJECT_NAME}_meters)
+target_link_libraries(test_main PRIVATE ${CMAKE_PROJECT_NAME}_resource_converters)
+target_link_libraries(test_main PRIVATE ${CMAKE_PROJECT_NAME}_protocols)
+target_link_libraries(test_main PRIVATE ${CMAKE_PROJECT_NAME}_common)
 
-add_library(
-	logika_converters
-	${SRC_DIR}/meters/converters/meter_converters.cpp
-)
-target_link_libraries(logika_converters PUBLIC logika_resources)
-target_include_directories(logika_converters PUBLIC ${INCLUDE_DIR})
-target_include_directories(logika_converters PUBLIC ${logika_resources_INCLUDE_DIR})
-
-target_link_libraries(test_main logika_converters)
-target_include_directories(test_main PRIVATE logika_converters)
+target_include_directories(test_main PRIVATE ${CMAKE_PROJECT_NAME}_logger)
+target_include_directories(test_main PRIVATE ${CMAKE_PROJECT_NAME}_connections)
+target_include_directories(test_main PRIVATE ${CMAKE_PROJECT_NAME}_meters)
+target_include_directories(test_main PRIVATE ${CMAKE_PROJECT_NAME}_resource_converters)
+target_include_directories(test_main PRIVATE ${CMAKE_PROJECT_NAME}_protocols)
+target_include_directories(test_main PRIVATE ${CMAKE_PROJECT_NAME}_common)
