logika: fixed linux build

--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -9,7 +9,6 @@ set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 set(INCLUDE_INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include/logika/resources)
-set(logika_resources_INCLUDE_DIRS ${INCLUDE_INSTALL_DIR} PARENT_SCOPE)
 
 set(Protobuf_USE_STATIC_LIBS OFF)
 find_package(Protobuf CONFIG)
@@ -83,5 +82,5 @@ if (WIN32 AND BUILD_SHARED_LIBS)
         LOGIKA_RESOURCES_EXPORT=__declspec\(dllimport\)
     )
 else()
-    target_compile_definitions(logika_resources PUBLIC LOGIKA_RESOURCES_EXPORT)
+    target_compile_definitions(logika_resources PUBLIC LOGIKA_RESOURCES_EXPORT=)
 endif()
