--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
 
 project(logika LANGUAGES CXX)
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -g0")
 
 # suppress MSVC warnings
 if(MSVC)
